WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
150746
Air should eliminate dead code
https://bugs.webkit.org/show_bug.cgi?id=150746
Summary
Air should eliminate dead code
Filip Pizlo
Reported
2015-10-30 18:38:39 PDT
Patch forthcoming.
Attachments
the patch
(22.36 KB, patch)
2015-10-30 18:43 PDT
,
Filip Pizlo
ggaren
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2015-10-30 18:43:59 PDT
Created
attachment 264456
[details]
the patch
WebKit Commit Bot
Comment 2
2015-10-30 18:45:53 PDT
Attachment 264456
[details]
did not pass style-queue: ERROR: Source/JavaScriptCore/b3/air/AirEliminateDeadCode.cpp:83: Place brace on its own line for function definitions. [whitespace/braces] [4] ERROR: Source/JavaScriptCore/b3/air/AirEliminateDeadCode.cpp:91: Place brace on its own line for function definitions. [whitespace/braces] [4] ERROR: Source/JavaScriptCore/b3/air/AirEliminateDeadCode.cpp:100: Place brace on its own line for function definitions. [whitespace/braces] [4] Total errors found: 3 in 11 files If any of these errors are false positives, please file a bug against check-webkit-style.
Geoffrey Garen
Comment 3
2015-10-31 10:10:53 PDT
Comment on
attachment 264456
[details]
the patch r=me
Geoffrey Garen
Comment 4
2015-10-31 10:12:51 PDT
Comment on
attachment 264456
[details]
the patch View in context:
https://bugs.webkit.org/attachment.cgi?id=264456&action=review
> Source/JavaScriptCore/b3/air/AirEliminateDeadCode.h:36 > +// This allocates StackSlots to places on the stack. It first allocates the pinned ones in index > +// order and then it allocates the rest using first fit.
Comment is wrong.
Filip Pizlo
Comment 5
2015-10-31 11:07:57 PDT
(In reply to
comment #4
)
> Comment on
attachment 264456
[details]
> the patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=264456&action=review
> > > Source/JavaScriptCore/b3/air/AirEliminateDeadCode.h:36 > > +// This allocates StackSlots to places on the stack. It first allocates the pinned ones in index > > +// order and then it allocates the rest using first fit. > > Comment is wrong.
Ooops!
Filip Pizlo
Comment 6
2015-10-31 16:15:42 PDT
Landed in
http://trac.webkit.org/changeset/191846
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug